--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
       - image: cimg/go:1.17
     steps:
       - attach_workspace:
-          at: "target/release/release-with-bin"
+          at: "~/project"
       - run:
           name: "pack artifacts"
           command: |
